# otclustpy

./: .gitignore  README.md  pyproject.toml
otclust/: baseline_distances.py  consensus.py  otclust.py
otclustpy/: baseline_distances.py  consensus.py  otclust.py  otproblem.py
tests/: test_dummy.py
